# KamiView

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  build_linux.sh  install_linux_deps.sh
.github/workflows/: rust.yml
backup/src/gui/: kamiview.rs
backup/src/gui/components/: anime_grid.rs  header.rs  mod.rs  search_input.rs  sidebar.rs
backup/src/gui/handlers/: anime_details.rs  image.rs  mod.rs  navigation.rs  playback.rs  search.rs  settings.rs  subscription_handler.rs  theme.rs
backup/src/gui/screens/: home.rs  mod.rs  search.rs  settings.rs
backup/src/gui/styles/: button.rs  card.rs  container.rs  mod.rs  theme.rs
backup/src/gui/types/: mod.rs
kami-view-front/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
kami-view-front/src/: app.jsx  index.css  main.jsx
kami-view-front/src/components/: AnimeCard.jsx  AnimeGrid.jsx  Header.jsx  Player.jsx  SearchBar.jsx  SearchInput.jsx  SearchResults.jsx  Sidebar.jsx  ThemeProvider.jsx
kami-view-front/src/components/modals/: DownloadModal.jsx
kami-view-front/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  Loading.jsx  Tooltip.jsx
kami-view-front/src/hooks/: useAnimeDetails.js  useAuth.js  useDebounce.js  useIpc.js  usePlayback.js  useSearch.js  useTheme.js
kami-view-front/src/pages/: AnimeDetails.jsx  Home.jsx  Search.jsx  Settings.jsx  index.js
kami-view-front/src/store/: index.js
kami-view-front/src/store/selectors/: animeDetailsSelectors.js  playbackSelectors.js  searchSelectors.js
kami-view-front/src/store/slices/: animeDetailsSlice.js  animeSlice.js  authSlice.js  playbackSlice.js  searchSlice.js  themeSlice.js
kami-view-front/src/store/thunks/: ipcThunks.js
kami-view-front/src/utils/: ipc.js  motion.js
resources/: kamiview.desktop
src/: config.rs  errors.rs  fonts.rs  lib.rs  logger.rs  main.rs  message.rs  models.rs  navigation.rs  resources.rs  tray.rs
src/client/: mod.rs
src/components/: loader.rs  main_content.rs  mod.rs  sidebar.rs
src/components/common/: button.rs  card.rs  container.rs  error.rs  icon_button.rs  image.rs  mod.rs  text.rs  text_input.rs
src/components/kodik/: badge.rs  episode_list.rs  mod.rs  result_card.rs  search.rs
src/di/: container.rs  interfaces.rs  mod.rs
src/gui/: cache.rs
src/gui/assets/: index.html
src/gui/backend/: event_loop.rs  ipc.rs  mod.rs  scripts.rs  server.rs  types.rs  webview.rs
src/gui/backend/handlers/: mod.rs
src/kodik/: api.rs  mod.rs  test_api.rs
src/mpv/: mod.rs
src/protocol/: mod.rs
src/screens/: anime_details.rs  mod.rs  post_details.rs  profile_details.rs
src/services/: http_client.rs  mod.rs  navigation.rs  post_service.rs  scraper.rs
src/services/config/: mod.rs
src/services/discord/: mod.rs
src/services/kodik/: api.rs  mod.rs
src/services/mpv/: mod.rs
src/services/shikimori/: mod.rs
src/services/storage/: mod.rs
src/shikimori/: client.rs  mod.rs  storage.rs
src/storage/: mod.rs
src/styles/: button.rs  container.rs  mod.rs  text_input.rs
src/theme/: colors.rs  components.rs  mod.rs
src/utils/: constants.rs  mod.rs  routes.rs
src/utils/command_macro/: Cargo.toml
src/utils/command_macro/src/: lib.rs
