[package]
name = "kamiview"
version = "0.1.0"
description = "A modern anime streaming app"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[package.metadata.bundle]
name = "KamiView"
identifier = "com.kamiview.app"
icon = ["resources/icon.ico", "resources/icon.png"]
version = "0.1.0"
copyright = "© 2024"
category = "Video"
short_description = "A modern anime streaming app"
long_description = """
KamiView is a modern, elegant anime streaming application 
that provides a seamless viewing experience.
"""

[dependencies]
iced = { version = "0.10", features = ["svg", "tokio", "debug", "advanced", "image"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.18"
tray-icon = "0.11"
window-vibrancy = "0.4"
wry = "0.35"
raw-window-handle = "0.5"
inline_tweak = { version = "1.1.1", features = ["derive"] }
rayon = "1.8"
futures = "0.3"
shaku = "0.6.1"
scraper = "0.17"
open = "5.0"
base64 = "0.21"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.11"
strsim = "0.10"
parking_lot = "0.12"
mpv-socket = { git = "https://github.com/mmitteregger/mpv-socket" }
lazy_static = "1.4"
tiny_http = "0.12"
local-ip-address = "0.5"
url = "2.4"
winreg = { version = "0.50", optional = true }
directories = "5.0"
discord-rich-presence = "0.2"

[build-dependencies]
winres = { version = "0.1", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[target.'cfg(unix)'.dependencies]
x11-dl = "2.21"
libxdo = "0.6"
gtk = { version = "0.18", features = ["v3_24"] }

[features]
default = []
windows_build = ["winres"]