[package]
name = "kami_view"
version = "0.1.0"
edition = "2021"

# Добавляем build-script
build = "build.rs"

[dependencies]
iced = { version = "0.10", features = ["svg", "tokio", "debug", "advanced", "image"] }
iced_aw = { version = "0.7", features = ["card", "modal"] }
tao = "0.24"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.18"
tray-icon = "0.11"
window-vibrancy = "0.4"
raw-window-handle = "0.5"
inline_tweak = { version = "1.1.1", features = ["derive"] }
rayon = "1.8"
futures = "0.3"
shaku = "0.6.1"
scraper = "0.17"
open = "5.0"
base64 = "0.21"
dotenv = "0.15"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.11"
strsim = "0.10"
parking_lot = "0.12"
mpv-socket = { git = "https://github.com/mmitteregger/mpv-socket" }
lazy_static = "1.4"
local-ip-address = "0.5"
url = "2.4"
winreg = { version = "0.50", optional = true }
directories = "5.0"
discord-rich-presence = "0.2.5"
bytes = "1.5.0"
image = "0.24"
command_macro = { path = "src/utils/command_macro" }
tokio-util = "0.7"
uuid = { version = "1.0", features = ["v4"] }
wry = "0.36"
tiny_http = "0.12"
port_scanner = "0.1.5"
windows = { version = "0.52", features = ["Win32_UI_HiDpi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[build-dependencies]
fs_extra = "1.3"